--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+      "esnext",
+      "es2015"
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -21,6 +22,8 @@
     "jsx": "preserve"
   },
   "include": [
-    "src"
-  ]
+    "src",
+    "./src/**/*"
+  ],
+  
 }
